chore: improve development tooling and build workflow
Improves the developer experience by streamlining the version generation workflow and eliminating duplicated build logic.

## Summary

- Enhanced `generate-version.js` with richer output and file management
- Added pnpm scripts to centralize version generation logic
- Updated VS Code tasks to use pnpm scripts instead of inline shell commands
- Fixed launch.json to use temporary profile for isolated debugging
- Documented manual version regeneration in DEVELOPMENT.md

## Changes

### generate-version.js Improvements

The script now:
- Outputs all version metadata (version, commit, commitFull, commitDate, branch, buildDate)
- Logs when it deletes existing files before regenerating
- Accepts `--copy-to` argument to specify target directories (out, dist, or both)

Sample output:
```
  Deleted existing: src/version.json
  Deleted existing: out/version.json
✓ Generated version.json
  version:    1.1.0
  commit:     811765ac (dirty)
  commitFull: 811765acb53f46010b6e684584034b0866dbb07a
  commitDate: 2025-12-22T17:01:37-05:00
  branch:     issues/163
  buildDate:  2025-12-23T19:22:32.090Z
  copied to:  out
```

### Centralized pnpm Scripts

Added two scripts to package.json:
- `generate-version` → copies to `out/` only (for development)
- `generate-version:all` → copies to `out/` and `dist/` (for production)

This eliminates duplication between tasks.json and package.json compile script.

### VS Code Task Simplification

The "Generate version.json" task now delegates to the pnpm script:
```json
"command": "./scripts/pnpm-exec.sh --filter rangelink-vscode-extension generate-version"
```

### Isolated Debug Profile

Added `--profile-temp` to launch.json to prevent conflicts between the installed
extension and the development version being debugged.

## Benefits

- Single source of truth for version generation logic
- Easier debugging with verbose output showing all metadata
- Clean debugging environment without extension 

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,26 +2,17 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Run RangeLink Extension (with watch)",
+      "name": "Debug RangeLink Extension",
       "type": "extensionHost",
       "request": "launch",
-      "args": ["--extensionDevelopmentPath=${workspaceFolder}/packages/rangelink-vscode-extension"],
+      "args": [
+        "--extensionDevelopmentPath=${workspaceFolder}/packages/rangelink-vscode-extension",
+        "--profile-temp"
+      ],
       "outFiles": [
         "${workspaceFolder}/packages/rangelink-vscode-extension/out/**/*.js",
         "${workspaceFolder}/packages/rangelink-core-ts/out/**/*.js"
-      ],
-      "preLaunchTask": "Watch: All (Parallel)"
-    },
-    {
-      "name": "Run RangeLink Extension (build once)",
-      "type": "extensionHost",
-      "request": "launch",
-      "args": ["--extensionDevelopmentPath=${workspaceFolder}/packages/rangelink-vscode-extension"],
-      "outFiles": [
-        "${workspaceFolder}/packages/rangelink-vscode-extension/out/**/*.js",
-        "${workspaceFolder}/packages/rangelink-core-ts/out/**/*.js"
-      ],
-      "preLaunchTask": "Build: All"
+      ]
     }
   ]
 }
