--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -204,6 +204,23 @@
             "No padding (paste text exactly as selected)"
           ],
           "description": "Smart padding for selected text when using Paste Selected Text to Destination (R-V)"
+        },
+        "rangelink.smartPadding.pasteBookmark": {
+          "type": "string",
+          "enum": [
+            "both",
+            "before",
+            "after",
+            "none"
+          ],
+          "default": "both",
+          "enumDescriptions": [
+            "Add space before and after (prevents concatenation)",
+            "Add space before only",
+            "Add space after only",
+            "No padding (paste bookmark as-is)"
+          ],
+          "description": "Smart padding for saved bookmarks when pasting to destinations"
         }
       }
     },
