Switched `rangelink.bookmark.add` to `editorTextFocus` to `editorHasSelection`

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -160,7 +160,7 @@
         "title": "Save Selection as Bookmark",
         "category": "RangeLink",
         "icon": "$(bookmark)",
-        "enablement": "editorTextFocus"
+        "enablement": "editorHasSelection"
       }
     ],
     "configuration": {
