Add R-B-S keybinding for Save Selection as Bookmark
Added `Cmd+R Cmd+B Cmd+S` keybinding with R-B prefix reserved for future bookmark sub-menu
expansion (list, navigate, manage) - prevents breaking changes when we add more bookmark features.

Changes:
- Keybinding: Cmd+R Cmd+B Cmd+S (Mac) / Ctrl+R Ctrl+B Ctrl+S (Win/Linux)
- Added package.json contract tests for comprehensive contribution coverage
- Updated README commands table and CHANGELOG

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -290,6 +290,12 @@
         "command": "rangelink.jumpToBoundDestination",
         "key": "ctrl+r ctrl+j",
         "mac": "cmd+r cmd+j"
+      },
+      {
+        "command": "rangelink.bookmark.add",
+        "key": "ctrl+r ctrl+b ctrl+s",
+        "mac": "cmd+r cmd+b cmd+s",
+        "when": "editorHasSelection"
       }
     ],
     "menus": {
