--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -154,6 +154,13 @@
         "title": "Open RangeLink Status Bar Menu",
         "category": "RangeLink",
         "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.bookmark.add",
+        "title": "Save Selection as Bookmark",
+        "category": "RangeLink",
+        "icon": "$(bookmark)",
+        "enablement": "editorHasSelection"
       }
     ],
     "configuration": {
@@ -283,6 +290,12 @@
         "command": "rangelink.jumpToBoundDestination",
         "key": "ctrl+r ctrl+j",
         "mac": "cmd+r cmd+j"
+      },
+      {
+        "command": "rangelink.bookmark.add",
+        "key": "ctrl+r ctrl+b ctrl+s",
+        "mac": "cmd+r cmd+b cmd+s",
+        "when": "editorHasSelection"
       }
     ],
     "menus": {
