feat(vscode-ext): register `bookmark.list` command and R-B keybinding
Adds infrastructure for the Open Bookmarks command (issue #165):
- CMD_BOOKMARK_LIST constant (`rangelink.bookmark.list`)
- Command entry in package.json with title "Open Bookmarks"
- Keybinding: Cmd+R Cmd+B (Mac) / Ctrl+R Ctrl+B (Win/Linux)

This establishes the R-B prefix pattern for bookmark operations:
- R-B = Open Bookmarks menu (this commit)
- R-B-S = Save Selection as Bookmark (already implemented)

Benefits:
- Consistent with existing bookmark.* namespace (bookmark.add, bookmark.manage)
- R-B is shorter than R-B-S, so no keybinding conflict

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -161,6 +161,12 @@
         "category": "RangeLink",
         "icon": "$(bookmark)",
         "enablement": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.bookmark.list",
+        "title": "Open Bookmarks",
+        "category": "RangeLink",
+        "icon": "$(bookmark)"
       }
     ],
     "configuration": {
@@ -296,6 +302,11 @@
         "key": "ctrl+r ctrl+b ctrl+s",
         "mac": "cmd+r cmd+b cmd+s",
         "when": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.bookmark.list",
+        "key": "ctrl+r ctrl+b",
+        "mac": "cmd+r cmd+b"
       }
     ],
     "menus": {
