Update language configuration in .coderabbit.yaml
The ChatGPT-provided default config was not good

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -4,8 +4,4 @@ reviews:
   auto_review: true
   review_status: true
 
-language:
-  enable:
-    - typescript
-    - javascript
-    - markdown
+language: "en-US"
