[issues/211] add "Save Selection as Bookmark" to editor context menu
Makes the bookmark command discoverable via right-click, matching how other RangeLink commands are exposed. The command already existed with Command Palette and keybinding support (Cmd+R Cmd+B Cmd+S); this adds the context menu entry.

Closes #211

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -335,6 +335,11 @@
           "when": "editorHasSelection",
           "command": "rangelink.pasteSelectedTextToDestination",
           "group": "8_rangelink@5"
+        },
+        {
+          "when": "editorHasSelection",
+          "command": "rangelink.bookmark.add",
+          "group": "8_rangelink@6"
         }
       ]
     }
