--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,7 +1,15 @@
-version: 1
-
+# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
+language: "en-US"
+early_access: false
 reviews:
-  auto_review: true
+  profile: "chill"
+  request_changes_workflow: false
+  high_level_summary: true
+  poem: true
   review_status: true
-
-language: 'en-US'
+  collapse_walkthrough: false
+  auto_review:
+    enabled: true
+    drafts: false
+chat:
+  auto_reply: true
