--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -1,7 +1,15 @@
-version: 1
-
-reviews:
-  auto_review: true
-  review_status: true
-
+# yaml-language-server: $schema=https://coderabbit.ai/integrations/schema.v2.json
 language: 'en-US'
+early_access: false
+reviews:
+  profile: 'chill'
+  request_changes_workflow: false
+  high_level_summary: true
+  poem: true
+  review_status: true
+  collapse_walkthrough: false
+  auto_review:
+    enabled: true
+    drafts: false
+chat:
+  auto_reply: true
