--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -305,8 +305,8 @@
       },
       {
         "command": "rangelink.bookmark.list",
-        "key": "ctrl+r ctrl+b",
-        "mac": "cmd+r cmd+b"
+        "key": "ctrl+r ctrl+b ctrl+l",
+        "mac": "cmd+r cmd+b cmd+l"
       }
     ],
     "menus": {
