[issues/166] implement Manage Bookmarks with delete functionality (#166) (#234)
* Scaffold introduction of `ManageBookmarksCommand`

* Introduce 1st ADR

* Convert `BookmarkService.addBookmark()` to new ADR standards

* Convert `addBookmark()` to `ExtensionResult`

* Adapt test to new `EzxtensionResult` flow/reality

* feat(bookmarks): implement ManageBookmarksCommand (#166)

Adds QuickPick UI for bookmark management with inline delete buttons.
Users can remove bookmarks via trash icon with confirmation dialog.

Features:
- QuickPick with bookmark list showing label and link
- Trash button on each item for deletion
- Warning dialog confirmation before delete
- Success/error feedback messages
- Auto-refresh list after deletion
- Auto-close when last bookmark removed

* test(vscode-adapter): add test for showWarningMessage action items

Adds test coverage for the variadic `items` parameter in `showWarningMessage()`.
The method now supports action buttons for confirmation dialogs.

* test(vscode-adapter): add tests for createQuickPick method

Adds test coverage for the `createQuickPick()` method used by ManageBookmarksCommand.

Tests added:
- Verify QuickPick instance created via VSCode API
- Verify configurable properties (title, placeholder, items)
- Verify show, hide, and dispose methods available

* Add `BookmarkService.removeBookmark()` and tests

* Add proper test support for `ThemeIcon`

* Introduce `createMockQuickPick()`

* Clanker-generated tests for `ManageBookmarksCommand`; adding as-is and I’ll review

* Linting/formatting improvements

* `createMockBookmarkService()` now supports optional bookmarks to simplify tests’ setup

* Used `any` for return types to match `vscode`’s signatures

* Leverage builder pattern in tests for `showWarningMessage()` to simplify setups

* Merged `confirmAndDelete` and `deleteBookmark` into a single method

  1. Richer return type: Promise<ExtensionResult<Bookmark> | undefined>
    - undefined = user cancelled (not an error)
 

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -164,7 +164,7 @@
       },
       {
         "command": "rangelink.bookmark.list",
-        "title": "Open Bookmarks",
+        "title": "List Bookmarks",
         "category": "RangeLink",
         "icon": "$(bookmark)"
       }
@@ -305,8 +305,8 @@
       },
       {
         "command": "rangelink.bookmark.list",
-        "key": "ctrl+r ctrl+b",
-        "mac": "cmd+r cmd+b"
+        "key": "ctrl+r ctrl+b ctrl+l",
+        "mac": "cmd+r cmd+b cmd+l"
       }
     ],
     "menus": {
