simplify terminal context menu UX
Removes misleading checkmark indicator since VSCode's context menus can't differentiate which terminal triggered them. Status bar remains the single source of truth for binding state.

Changes:
- Remove `rangelink.terminalBoundIndicator` command and checkmark indicator
- Remove `rangelink.terminalIsBound` context key (no longer needed)
- Add `rangelink.isBound` context key (true when ANY destination is bound)
- Add `rangelink.bindToTerminalHere` command with short label for context menus
- Keep `rangelink.bindToTerminal` with full title for command palette discoverability
- Terminal menus now show: "Bind RangeLink Here" (always) + "Unbind RangeLink" (when bound)
- Centralize binding state management via `setBoundDestination()` and `clearBoundDestination()` helpers
- Add `expectContextKeys()` test helper

Benefits:
- Cleaner menus without misleading per-terminal indicators
- "Bind RangeLink Here" always visible, allowing terminal rebinding
- Unbind option works for all destination types via `rangelink.isBound`
- Single source of truth for binding state mutations

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -114,6 +114,12 @@
         "icon": "$(link)"
       },
       {
+        "command": "rangelink.bindToTerminalHere",
+        "title": "Bind RangeLink Here",
+        "category": "RangeLink",
+        "icon": "$(link)"
+      },
+      {
         "command": "rangelink.bindToTextEditor",
         "title": "Bind RangeLink to Text Editor Destination",
         "category": "RangeLink",
@@ -139,7 +145,7 @@
       },
       {
         "command": "rangelink.unbindDestination",
-        "title": "Unbind RangeLink Destination",
+        "title": "Unbind RangeLink",
         "category": "RangeLink",
         "icon": "$(close)"
       },
@@ -310,6 +316,12 @@
       }
     ],
     "menus": {
+      "commandPalette": [
+        {
+          "command": "rangelink.bindToTerminalHere",
+          "when": "false"
+        }
+      ],
       "editor/context": [
         {
           "when": "editorHasSelection",
@@ -344,24 +356,22 @@
       ],
       "terminal/title/context": [
         {
-          "when": "!rangelink.terminalIsBound",
-          "command": "rangelink.bindToTerminal",
+          "command": "rangelink.bindToTerminalHere",
           "group": "rangelink@1"
         },
         {
-          "when": "rangelink.terminalIsBound",
+          "when": "rangelink.isBound",
           "command": "rangelink.unbindDestination",
           "group": "rangelink@2"
         }
       ],
       "terminal/context": [
         {
-          "when": "!rangelink.terminalIsBound",
-          "command": "rangelink.bindToTerminal",
+          "command": "rangelink.bindToTerminalHere",
           "group": "rangelink@1"
         },
         {
-          "when": "rangelink.terminalIsBound",
+          "when": "rangelink.isBound",
           "command": "rangelink.unbindDestination",
           "group": "rangelink@2"
         }
