[issues/97] add Navigate to Link command foundation (#97)
Adds the command constant, message codes, and package.json entry for the Navigate to Link feature.
This enables users to paste/type a RangeLink in the Command Palette and navigate directly to it.

Changes:
- CMD_NAVIGATE_TO_RANGELINK constant in commandIds.ts
- Message codes for input box prompt, placeholder, and invalid link error
- Command entry in package.json with "Navigate to Link" title and go-to-file icon
- Contract test updated for new command

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -285,6 +285,12 @@
         "command": "rangelink.terminal.unbind",
         "title": "RangeLink: Unbind",
         "icon": "$(close)"
+      },
+      {
+        "command": "rangelink.navigateToRangeLink",
+        "title": "Navigate to Link",
+        "category": "RangeLink",
+        "icon": "$(go-to-file)"
       }
     ],
     "configuration": {
