[Issues/73] add terminal context menu for bind/unbind (#73) (#233)
* add context key constant for terminal binding state (#73)

Adds CONTEXT_TERMINAL_IS_BOUND constant to support `when` clause conditionals in package.json menus.

This enables showing/hiding context menu items based on whether a terminal is currently bound as a RangeLink destination.

Part of #73 - Terminal Binding Context Menu

* Consolidate tests to avoid having some that are solely focused on logging

* Binding/unbinding to terminal now sets/clears the context

* Register improvements in `package.json` + tests

* `CHANGELOG` entry

* Update `README`

* Ran `format:fix`

* [PR feedback] Fix `expectTerminalContextNotSet` to catch all context values

`expect.anything()` doesn't match `undefined`/`null`, so the helper could miss edge cases.
Replaced with explicit checks for `true` and `false` - the only values the production code uses.

Benefits:
- More robust assertion that explicitly covers both possible context values
- Follows existing test patterns (toHaveBeenCalledWith over manual mock.calls inspection)

Ref: https://github.com/couimet/rangeLink/pull/233#discussion_r2682349465

* simplify terminal context menu UX

Removes misleading checkmark indicator since VSCode's context menus can't differentiate which terminal triggered them. Status bar remains the single source of truth for binding state.

Changes:
- Remove `rangelink.terminalBoundIndicator` command and checkmark indicator
- Remove `rangelink.terminalIsBound` context key (no longer needed)
- Add `rangelink.isBound` context key (true when ANY destination is bound)
- Add `rangelink.bindToTerminalHere` command with short label for context menus
- Keep `rangelink.bindToTerminal` with full title for command palette discoverability
- Terminal menus now show: "Bind RangeLink Here" (always) + "Unbind RangeLink" (when bound)
- Centralize binding state management via `setBoundDestination()` and `clearBoundDestination()` helpers
- Add `expectContextK

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -114,6 +114,12 @@
         "icon": "$(link)"
       },
       {
+        "command": "rangelink.bindToTerminalHere",
+        "title": "Bind RangeLink Here",
+        "category": "RangeLink",
+        "icon": "$(link)"
+      },
+      {
         "command": "rangelink.bindToTextEditor",
         "title": "Bind RangeLink to Text Editor Destination",
         "category": "RangeLink",
@@ -139,7 +145,7 @@
       },
       {
         "command": "rangelink.unbindDestination",
-        "title": "Unbind RangeLink Destination",
+        "title": "Unbind RangeLink",
         "category": "RangeLink",
         "icon": "$(close)"
       },
@@ -310,6 +316,12 @@
       }
     ],
     "menus": {
+      "commandPalette": [
+        {
+          "command": "rangelink.bindToTerminalHere",
+          "when": "false"
+        }
+      ],
       "editor/context": [
         {
           "when": "editorHasSelection",
@@ -340,6 +352,28 @@
           "when": "editorHasSelection",
           "command": "rangelink.bookmark.add",
           "group": "8_rangelink@6"
+        }
+      ],
+      "terminal/title/context": [
+        {
+          "command": "rangelink.bindToTerminalHere",
+          "group": "rangelink@1"
+        },
+        {
+          "when": "rangelink.isBound",
+          "command": "rangelink.unbindDestination",
+          "group": "rangelink@2"
+        }
+      ],
+      "terminal/context": [
+        {
+          "command": "rangelink.bindToTerminalHere",
+          "group": "rangelink@1"
+        },
+        {
+          "when": "rangelink.isBound",
+          "command": "rangelink.unbindDestination",
+          "group": "rangelink@2"
         }
       ]
     }
