[issues/243] add `Paste Path` commands for context menus and command palette (#243)
Adds command infrastructure for sharing file paths to bound destinations via two access methods:
1. Context menus (explorer, editor tab, editor content) - positioned near VSCode's "Copy Path" items
2. Command palette - "Paste Current File Path" for use while typing in AI chat panels

Changes:
- Add 4 command IDs: context menu (pasteFilePath*) and command palette (pasteCurrentFilePath*)
- Context menu commands: "RangeLink: Paste Path" titles, hidden from command palette
- Command palette commands: "Paste Current File Path" titles, enabled when editor is open
- Add context menu entries to explorer/context, editor/title/context, and editor/context
- Add contract tests for all new commands and menu contributions

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -179,6 +179,32 @@
         "title": "List Bookmarks",
         "category": "RangeLink",
         "icon": "$(bookmark)"
+      },
+      {
+        "command": "rangelink.pasteFilePath",
+        "title": "RangeLink: Paste Path",
+        "category": "RangeLink",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.pasteFilePathRelative",
+        "title": "RangeLink: Paste Relative Path",
+        "category": "RangeLink",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.pasteCurrentFilePath",
+        "title": "Paste Current File Path",
+        "category": "RangeLink",
+        "icon": "$(file-symlink-file)",
+        "enablement": "editorIsOpen"
+      },
+      {
+        "command": "rangelink.pasteCurrentFilePathRelative",
+        "title": "Paste Current Relative File Path",
+        "category": "RangeLink",
+        "icon": "$(file-symlink-file)",
+        "enablement": "editorIsOpen"
       }
     ],
     "configuration": {
@@ -330,6 +356,14 @@
         {
           "command": "rangelink.bindToTextEditorHere",
           "when": "false"
+        },
+        {
+          "command": "rangelink.pasteFilePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.pasteFilePathRelative",
+          "when": "false"
         }
       ],
       "editor/context": [
@@ -372,6 +406,34 @@
           "when": "rangelink.isBound",
           "command": "rangelink.unbindDestination",
           "group": "8_rangelink@7"
+        },
+        {
+          "command": "rangelink.pasteFilePathRelative",
+          "group": "5_cutcopypaste@10"
+        },
+        {
+          "command": "rangelink.pasteFilePath",
+          "group": "5_cutcopypaste@11"
+        }
+      ],
+      "editor/title/context": [
+        {
+          "command": "rangelink.pasteFilePathRelative",
+          "group": "5_cutcopypaste@10"
+        },
+        {
+          "command": "rangelink.pasteFilePath",
+          "group": "5_cutcopypaste@11"
+        }
+      ],
+      "explorer/context": [
+        {
+          "command": "rangelink.pasteFilePathRelative",
+          "group": "5_cutcopypaste@10"
+        },
+        {
+          "command": "rangelink.pasteFilePath",
+          "group": "5_cutcopypaste@11"
         }
       ],
       "terminal/title/context": [
