[issues/246] support `untitled` files in editor context menu
The "Bind RangeLink Here" context menu entry should appear for untitled/scratch
files, not just saved files. This aligns with the documented workflow where users
create scratch files with Cmd+N for drafting AI prompts.

Changes:
- Update `when` clause: `resourceScheme == file || resourceScheme == untitled`
- Update contract test to match

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -336,7 +336,7 @@
         {
           "command": "rangelink.bindToTextEditorHere",
           "group": "8_rangelink@0",
-          "when": "resourceScheme == file"
+          "when": "resourceScheme == file || resourceScheme == untitled"
         },
         {
           "when": "editorHasSelection",
