[issues/246] Add text editor context menu for bind/unbind (#246) (#248)
* [issues/246] add text editor context menu for bind/unbind (#246)

Add context menu entries when right-clicking inside the editor text area,
matching the terminal UX established in PR #233.

Changes:
- Add `rangelink.bindToTextEditorHere` command (hidden from Command Palette)
- Add "Bind RangeLink Here" to editor/context menu (group 8_rangelink@0)
- Add "Unbind RangeLink" to editor/context menu when bound (group 8_rangelink@7)
- Update contract tests for new command and menu entries

Benefits:
- Consistent UX across terminal and editor context menus
- Quick binding without Command Palette lookup
- Menu items grouped with other RangeLink actions

* [issues/246] register bindToTextEditorHere command handler

Wire up the new context menu command by registering it in extension.ts,
following the same shared handler pattern established for terminal binding.

Changes:
- Import CMD_BIND_TO_TEXT_EDITOR_HERE constant
- Extract bindToTextEditorHandler (reuses existing text-editor bind logic)
- Register both CMD_BIND_TO_TEXT_EDITOR and CMD_BIND_TO_TEXT_EDITOR_HERE
  with the shared handler
- Update extension.test.ts command registration count (21 → 22)
- Add 'rangelink.bindToTextEditorHere' to expectedCommands array

* [issues/246] update documentation for text editor context menu

Add documentation for the new "Bind RangeLink Here" context menu entry
that appears when right-clicking inside the editor text area.

Changes:
- CHANGELOG.md: Add entry under [Unreleased] → Added
- README.md: Update "How to use" section with right-click option

* Caught a small miss from before as I was reviewing the `CHANGELOG`

* [issues/246] support `untitled` files in editor context menu

The "Bind RangeLink Here" context menu entry should appear for untitled/scratch
files, not just saved files. This aligns with the documented workflow where users
create scratch files with Cmd+N for drafting AI prompts.

Changes:
- Update `w

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -126,6 +126,12 @@
         "icon": "$(link)"
       },
       {
+        "command": "rangelink.bindToTextEditorHere",
+        "title": "Bind RangeLink Here",
+        "category": "RangeLink",
+        "icon": "$(link)"
+      },
+      {
         "command": "rangelink.bindToCursorAI",
         "title": "Bind RangeLink to Cursor AI Destination",
         "category": "RangeLink",
@@ -320,9 +326,18 @@
         {
           "command": "rangelink.bindToTerminalHere",
           "when": "false"
+        },
+        {
+          "command": "rangelink.bindToTextEditorHere",
+          "when": "false"
         }
       ],
       "editor/context": [
+        {
+          "command": "rangelink.bindToTextEditorHere",
+          "group": "8_rangelink@0",
+          "when": "resourceScheme == file || resourceScheme == untitled"
+        },
         {
           "when": "editorHasSelection",
           "command": "rangelink.copyLinkWithRelativePath",
@@ -352,6 +367,11 @@
           "when": "editorHasSelection",
           "command": "rangelink.bookmark.add",
           "group": "8_rangelink@6"
+        },
+        {
+          "when": "rangelink.isBound",
+          "command": "rangelink.unbindDestination",
+          "group": "8_rangelink@7"
         }
       ],
       "terminal/title/context": [
