--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -201,7 +201,7 @@
       },
       {
         "command": "rangelink.pasteCurrentFilePathRelative",
-        "title": "Paste Current Relative File Path",
+        "title": "Paste Current File Relative Path",
         "category": "RangeLink",
         "icon": "$(file-symlink-file)",
         "enablement": "editorIsOpen"
