add R-G keybinding and rename to "Go to Link"
Adds keyboard shortcut `Cmd+R Cmd+G` (Mac) / `Ctrl+R Ctrl+G` (Win/Linux)
for the new navigation command, following the R-prefix family pattern.

Renames "Navigate to Link" → "Go to Link" for consistency with mnemonic:
- R-J = **J**ump to Bound Destination
- R-G = **G**o to Link

"G" for "Go" also parallels VSCode's `Cmd+G` (Go to Line), making it
instantly learnable for existing VSCode users.

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -287,8 +287,8 @@
         "icon": "$(close)"
       },
       {
-        "command": "rangelink.navigateToRangeLink",
-        "title": "Navigate to Link",
+        "command": "rangelink.goToRangeLink",
+        "title": "Go to Link",
         "category": "RangeLink",
         "icon": "$(go-to-file)"
       }
@@ -460,6 +460,11 @@
         "command": "rangelink.bookmark.list",
         "key": "ctrl+r ctrl+b ctrl+l",
         "mac": "cmd+r cmd+b cmd+l"
+      },
+      {
+        "command": "rangelink.goToRangeLink",
+        "key": "ctrl+r ctrl+g",
+        "mac": "cmd+r cmd+g"
       }
     ],
     "menus": {
